@@ -7,6 +7,7 @@ Bug fixes:
 - #6972 Fix SonarCloud security hotspots
 - #6971 Fix vulnerabilities from SonarCloud
 - #6974 Fix macOS 10.13 application filess
+- #6976 Fix windows builds
 
 Enhancements:
 - #6954 Move language selection to advanced section
